# karaoker

./: .env.example  .gitignore  CLAUDE.md  NOTES.md  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
api/: .dockerignore  Dockerfile  gcs_signed.py  main.py  redis_client.py  requirements.txt  tasks.py
apps/api/: package.json  tsconfig.json
apps/api/src/: main.ts  state.ts
apps/orchestrator/: package.json
apps/orchestrator/src/: main.ts  workflow.ts
apps/stage-stub/: package.json
apps/stage-stub/src/: main.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/components/: JobView.tsx  Register.tsx  Upload.tsx
infra/: bucket-cors.json  deploy-api.sh  deploy-worker.sh  env.example  setup.sh  wipe.sh
stages/align/: CLAUDE.md  pyproject.toml
stages/align/bench/: README.md  runner.py
stages/align/src/align/: main.py  pipeline.py
stages/align/tests/: test_chunking.py
stages/compose/: CLAUDE.md  package.json
stages/compose/bench/: README.md  run.mjs
stages/compose/bench/fixtures/: fixture.json
stages/compose/demo/: overlay.html
stages/compose/src/: ass.ts  main.ts  manifest.ts
stages/compose/tests/: compose.test.ts
stages/record-mix/: CLAUDE.md  NOTES.md  pyproject.toml
stages/record-mix/assets/: make_plate_ir.py
stages/record-mix/bench/: .gitignore  README.md  fetch_fixtures.py  run_bench.py
stages/record-mix/src/record_mix/: align_sync.py  bleed.py  filter_chain.py  loudnorm.py  main.py  pipeline.py
stages/record-mix/tests/: conftest.py  test_align_sync.py  test_contract.py  test_filter_chain.py  test_smoke.py
stages/separate/: CLAUDE.md  pyproject.toml
stages/separate/bench/: README.md  RESEARCH.md  fetch_fixtures.py  run_bench.py
stages/separate/bench/results/: results.json  summary.md
stages/separate/src/separate/: main.py  pipeline.py
stages/transcribe/: CLAUDE.md  Dockerfile  pyproject.toml
stages/transcribe/bench/: README.md  compare.py
stages/transcribe/bench/fixtures/: ahmet-kaya-icimde-olen-biri.txt  billie-eilish-happier-than-ever.txt  dur-leyla-pulse-of-anatolia.txt
stages/transcribe/src/transcribe/: lrclib.py  main.py  pipeline.py  qwen3.py  vad.py
stages/transcribe/tests/: test_pipeline.py  test_vad.py
tests/: test_ass_builder.py
tools/logs/: package.json  tsconfig.json
tools/logs/src/: cli.ts  tail.ts
web/: index.html
worker/: .dockerignore  Dockerfile  ass_builder.py  cloudbuild.yaml  gcs.py  main.py  pipeline.py  redis_client.py  requirements.txt
