[project]
name = "annemusic-stage-record-mix"
version = "0.1.0"
description = "Stage 4: mix user recording with instrumental, optional pitch smoothing"
requires-python = ">=3.11,<3.13"
dependencies = [
  "annemusic-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jsonschema>=4.23",
  "certifi>=2024",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/record_mix"]

[tool.uv.sources]
annemusic-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]
