[project]
name = "annemusic-stage-record-mix"
version = "0.1.0"
description = "Stage 4: mix user recording with instrumental, optional pitch smoothing"
requires-python = ">=3.11,<3.13"
dependencies = [
  "annemusic-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jsonschema>=4.23",
  "certifi>=2024",
  # Tier-1 DSP deps.
  "numpy<2",                # workspace-wide pin (align/transcribe stuck on <2)
  "scipy>=1.11",            # BSD — FFT for GCC-PHAT alignment
  "soundfile>=0.12",        # BSD — WAV I/O for alignment + tests + bench
  "demucs==4.0.1",          # MIT — bleed cleanup, matches stages/separate pin
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/record_mix"]

[tool.uv.sources]
annemusic-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]
