[project]
name = "annemusic-stage-separate"
version = "0.1.0"
description = "Stage 1: vocal/instrumental source separation"
requires-python = ">=3.11,<3.13"
dependencies = [
  "annemusic-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "demucs==4.0.1",
  "torch==2.2.2",
  "torchaudio==2.2.2",
  "numpy<2",
  "jsonschema>=4.23",
  "certifi>=2024",
  # torchaudio needs an I/O backend to save .wav; soundfile is the portable one.
  "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/separate"]

[tool.uv.sources]
annemusic-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]
