[project]
name = "annemusic-stage-transcribe"
version = "0.1.0"
description = "Stage 2: transcribe vocals (faster-whisper) or fetch known lyrics (LRCLIB)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "annemusic-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "faster-whisper==1.0.3",
  "numpy<2",
  "jsonschema>=4.23",
  "certifi>=2024",
  "httpx>=0.27",
  "soundfile>=0.12",
  "qwen-asr>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]

[tool.uv.sources]
annemusic-shared = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]
